--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "phpunit/phpunit" : "4.5.*"
     },
     "autoload" : {
-        "classmap" : [
-            "src/"
-        ]
+        "psr-4" : {
+            "AnyTV\\Freedom\\" : "src/Freedom/"
+        }
     }
 }
