--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: php
 php:
-  - "5.6"
-  - "5.5"
-  - "5.4"
-  - "5.3"
-  - "5.2"
+  - 5.4
+  - 5.5
+  - 5.6
+  - hhvm
+  - nightly
 
 before_script:
-	- composer self-update
+  - composer install
+  - composer update
+  - composer self-update
